# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.1.0] - 2019-12-04
### Added
- Correctly Place structures which are not on top of a page
- Set `corresp` and `facs` attributes of `pb` elements
- Store links to `DEFAULT` images in METS
- Tests for new functionality

### Changed
- Retrieve ALTO files via a dedicated struct link member of the class Mets
- Move text retrieval to Alto class

### Removed
- Get rid of code artifacts carried over from `tocrify`

### Fixed
- https://github.com/slub/mets-mods2tei/issues/28