@@ -5,6 +5,12 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+### Added
+- Treat nested AMD-type (non-logical) divs in logical struct map (i.e.
+newspaper case)
+
+### Changed
+- Make extraction of subtitles conditional on their presence
 
 ## [0.1.0] - 2019-12-04
 ### Added
